--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 project.image=image/
+
+# Authentication retaled configuration
+logging.level.org.springframework.security=DEBUG
