--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-server.port=9090
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=5454
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#db specific properties
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:ecommerce}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:admin}
+
+
+#ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # File Related All Configuration
 spring.servlet.multipart.max-file-size=10MB
@@ -12,6 +19,3 @@ project.image=image/
 
 # Authentication retaled configuration
 logging.level.org.springframework.security=DEBUG
-
-
-spring.profiles.active=dev
